--- a/MARTA Project/public/stylesheets/demonew.css
+++ b/MARTA Project/public/stylesheets/demonew.css
@@ -13,8 +13,6 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 	margin:0;
 	padding:0;
 }
-
-
 html,body {
 	margin:0;
 	padding:0;
@@ -53,8 +51,7 @@ footer, header, hgroup, menu, nav, section {
 /* General Demo Style */
 body{
 	font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
-	/*background: #fff url(../images/bg.jpg) repeat top left;*/
-	background-image: url("./images/marta-midtown-1.png");
+	background: #fff url(../images/bg.jpg) repeat top left;
 	font-weight: 400;
 	font-size: 15px;
 	color: #1d3c41;
